# hyperhint

./: README.md  architecture-sequence.puml
backend/: .env.example  .gitignore  README.md  pyproject.toml  start.py  test_backend.py
backend/data/memory/knowledge_files/: project_overview.md
backend/data/memory/short_term/: api_documentation.md  config.json  development_notes.txt  frontend_components.md  project_overview.md  sample_code.py
backend/hyperhint/: main.py
backend/hyperhint/llm/: __init__.py  _ollama.py  _openai.py
backend/hyperhint/memory/: __init__.py  _knowledge_files.py  _long_term.py  _short_term.py  _types.py
backend/hyperhint/server/: __init__.py  routes.py  sse.py  websocket.py
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/app/api/actions/: route.ts
frontend/src/app/api/files/: route.ts
frontend/src/app/api/generate-filename/: route.ts
frontend/src/components/: ChatInterface.tsx  EnhancedInput.tsx  KnowledgeSidebar.tsx  MarkdownMessage.tsx  ModelSelector.tsx
